--- a/index.pug
+++ b/index.pug
@@ -55,5 +55,5 @@ html
     //- JS
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
     //- Import JS
-    script(src='app.js')
+    script(src='app-min.js')
         
