Removed Compiled Files

--- a/index.pug
+++ b/index.pug
@@ -30,7 +30,7 @@ html
           p Every American should know who is representing them in congress. Finding this information can be hard, and it shouldn't be. This app makes it dead simple to find your congress members. Don't Believe me? Enter your zip code above to find out!
           .btn-group
             a.one(href="https://www.senate.gov/senators/contact/") Learn More
-            a.two(href="#")
+            a.two(href="https://github.com/meads2/Political-App")
               i.ion-social-github
               span Github
           
